@@ -263,6 +263,8 @@ https://github.com/networkupstools/nut/milestone/11
      from templates). [issue #321, PR #2383]
    * added an `OBLBDURATION` (seconds) setting to optionally delay raising
      the alarm for immediate shutdown in critical situation. [#321]
+   * optimized `parse_status()` by not checking further strings if we had
+     a match; report unexpected tokens in debug log. [#415]
 
  - More systemd integration:
    * Introduced a `nut-sleep.service` unit which stops `nut.target` when a
